Refactor Overall Test