@@ -1,7 +1,6 @@
 package com.ottugi.curry.web.dto.recommend;
 
-import static com.ottugi.curry.domain.recipe.RecipeTest.INGREDIENT1;
-import static com.ottugi.curry.domain.recipe.RecipeTest.INGREDIENT2;
+import static com.ottugi.curry.domain.recipe.RecipeTest.INGREDIENT;
 import static com.ottugi.curry.domain.recipe.RecipeTest.PAGE;
 import static com.ottugi.curry.domain.recipe.RecipeTest.SIZE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -10,7 +9,7 @@ import com.ottugi.curry.domain.recipe.Recipe;
 import com.ottugi.curry.domain.recipe.RecipeTest;
 import com.ottugi.curry.domain.user.User;
 import com.ottugi.curry.domain.user.UserTest;
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -19,7 +18,7 @@ public class RecipeIngRequestDtoTest {
     public static RecipeIngRequestDto initRecipeIngRequestDto(User user, Recipe recipe) {
         return RecipeIngRequestDto.builder()
                 .userId(user.getId())
-                .ingredients(Collections.singletonList(INGREDIENT1))
+                .ingredients(List.of(INGREDIENT))
                 .time(recipe.getTime().getTimeName())
                 .difficulty(recipe.getDifficulty().getDifficulty())
                 .composition(recipe.getComposition().getComposition())
@@ -43,9 +42,8 @@ public class RecipeIngRequestDtoTest {
         RecipeIngRequestDto recipeIngRequestDto = initRecipeIngRequestDto(user, recipe);
 
         assertEquals(user.getId(), recipeIngRequestDto.getUserId());
-        assertEquals(2, recipeIngRequestDto.getIngredients().size());
-        assertEquals(INGREDIENT1, recipeIngRequestDto.getIngredients().get(0));
-        assertEquals(INGREDIENT2, recipeIngRequestDto.getIngredients().get(1));
+        assertEquals(1, recipeIngRequestDto.getIngredients().size());
+        assertEquals(INGREDIENT, recipeIngRequestDto.getIngredients().get(0));
         assertEquals(recipe.getTime().getTimeName(), recipeIngRequestDto.getTime());
         assertEquals(recipe.getDifficulty().getDifficulty(), recipeIngRequestDto.getDifficulty());
         assertEquals(recipe.getComposition().getComposition(), recipeIngRequestDto.getComposition());
